--- a/config
+++ b/config
@@ -36,7 +36,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+A kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show run || j4-dmenu-desktop || dmenu_run
+bindsym $mod+d exec j4-dmenu-desktop || rofi -show run || dmenu_run
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -152,8 +152,6 @@ bindsym $mod+r mode "resize"
 
 bindsym $mod+shift+x exec i3lock -c 005f6b
 
-exec --no-startup-id nitrogen --restore
-
 set $bg-color 	         #2f343f
 set $inactive-bg-color   #2f343f
 set $text-color          #f3f4f5
@@ -182,3 +180,5 @@ bar {
 }
 
 exec_always feh --bg-scale /home/amine/.bg-img/wallpaper.jpg
+
+exec xinput set-prop 12  297 1
